# utilus_home_assignment

./: .gitignore  README.md  loader.py  main.py  metrics.py  models.py  requirements-dev.txt  requirements.txt
_template_archive/: ARCHITECTURE.md  CHECKLIST.md  DEPLOYMENT.md  Dockerfile  ENHANCEMENTS.md  ENHANCEMENTS_REPORT.md  ENHANCEMENT_EVALUATION.md  FEATURES.md  Makefile  PRODUCTION_ENHANCEMENTS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
_template_archive/app/: cli.py  main.py
_template_archive/app/api/: __init__.py  dependencies.py  routes.py  schemas.py
_template_archive/app/application/: __init__.py  metrics.py  pipeline.py  runner.py
_template_archive/app/domain/: __init__.py  exceptions.py  models.py  transformers.py  validation.py
_template_archive/app/infrastructure/: __init__.py  logging.py  monitoring.py  resilience.py  settings.py
_template_archive/app/infrastructure/repositories/: __init__.py  base.py  pandas_repository.py  spark_repository.py
_template_archive/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
_template_archive/tests/: test_api.py  test_pipeline.py  test_transformers.py
docs/: ARCHITECTURE.md  DATA_QUALITY.md  DESIGN.md  IMPLEMENTATION_APPROACHES.md  METRICS_IMPACT_ANALYSIS.md  RESTRUCTURING_SUMMARY.md
notebooks/: 01_subscription_data_inspection.ipynb  02_customer_data_inspection_ipynb.ipynb  03_metric_validation_and_eda.ipynb
output/: report.json
src/: __init__.py
tests/: conftest.py  test_clean_customers.py  test_clean_subscriptions.py  test_loader.py  (+1 more)
(+5 files in other folders)
